add device-delete api
