# core_libs/models/model.go
@@ -1,32 +1,40 @@
 package models
-type DeviceCreate struct{
-	Token *string `json:"token"`
+
+type DeviceCreate struct {
+	Token      *string `json:"token"`
 	MacAddress *string `json:"mac_address"`
 }
-type ThingRequest struct{
-	Key *string `json:"key"`
-	Name *string `json:"name"`
+
+type DeviceDelete struct {
+	Token     string `json:"token"`
+	ThingID   string `json:"thing_id"`
+	ChannelID string `json:"channel_id"`
+}
+
+type ThingRequest struct {
+	Key      *string   `json:"key"`
+	Name     *string   `json:"name"`
 	Metadata *Metadata `json:"metadata"`
 }
 type ThingResponse struct {
-	ID *string `json:"id"`
-	Key *string `json:"key"`
-	Name *string `json:"name"`
+	ID       *string   `json:"id"`
+	Key      *string   `json:"key"`
+	Name     *string   `json:"name"`
 	Metadata *Metadata `json:"metadata"`
 }
 type ThingMainflux struct {
-	ThingID string `json:"thing_id"`
+	ThingID  string `json:"thing_id"`
 	ThingKey string `json:"thing_key"`
 }
 type ResponseCreateDevice struct {
-	ThingID string `json:"thing_id"`
-	ThingKey string `json:"thing_key"`
+	ThingID   string `json:"thing_id"`
+	ThingKey  string `json:"thing_key"`
 	ChannelID string `json:"channel_id"`
 }
-type Metadata struct{
+type Metadata struct {
 	Type string `json:"type"`
 }
-type ChannelRequest struct{
-	Name string `json:"name"`
+type ChannelRequest struct {
+	Name     string    `json:"name"`
 	Metadata *Metadata `json:"metadata"`
 }
