# routers/device.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"SmartHome_Adapter/controllers"
+
 	"github.com/codegangsta/negroni"
 	"github.com/gorilla/mux"
 )
@@ -11,6 +12,12 @@ func SetDeviceRouter(router *mux.Router) *mux.Router {
 		negroni.New(
 			negroni.HandlerFunc(controllers.CreateDevice),
 		)).Methods("POST")
+
+	router.Handle("/smarthome/v1/delete-device",
+		negroni.New(
+			negroni.HandlerFunc(controllers.DeleteDevice),
+		)).Methods("POST")
+
 	router.Handle("/smarthome/v1/testHello",
 		negroni.New(
 			negroni.HandlerFunc(controllers.HelloWorld),
